# bygfoot

./: trunk
bfscript/trunk/: README  bfassignfifatalents  bfcheckconsts  bfcheckfuncs  bfcheckgettext  bfcheckgettext.learnbuffer  bfcheckmakefile  bfcheckmofiles  bfcheckpotfile  bfcopygmos  bfcountlines  bfcountteams  bfcppatches  bfdiffcvs  bfgetpot  bfmakebin  bfmakefile  bfmakepatch  bfmakerpms  bfmakesrc  bfmakeupgrade  bfpack  bfpo_statistics  bfupload  bfuploadcomm  bfuploaddef  bfuploadhowtos  bygfoot-update  bygfoot-updated  bygfoot-updatez  cvc  deb  diffsvn  grec  makesrc  sav  scripts.cfg  tmp  tmp2
bfscript/trunk/phpBB/: README  get_csv.pl  mailUsers.pl  testEmailaddress.pl
bfscript/trunk/spec/: bygfoot.spec
branches/bygfoot-unstable/src/: Makefile.am  editor_callbacks.c  editor_defs.h  games.c  misc2_interface.c.bak  options_callbacks.c  startup.c
branches/bygfoot-unstable/support_files/text_files/: bygfoot.conf  help  teams
bygfoot/tags/release_1_8_0/bygfoot-unstable/: ChangeLog  INSTALL  bygfoot_misc.glade  revision_number
bygfoot/tags/release_1_8_0/bygfoot-unstable/po/: bygfoot.pot  fr.po
bygfoot/tags/release_1_8_0/bygfoot-unstable/src/: bygfoot.h  callbacks.c  editor_callback_func.h  enums.h  files.c  finance.h  game_gui.h  generation.h  load_save.h  misc2_interface.c  player.h  treeview.h  window.h  xml.c  xml_fixtures.h  xml_teams.c
bygfoot/tags/release_1_8_0/bygfoot-unstable/support_files/text_files/: country_de  country_eng  country_es
bygfoot/tags/release_1_8_1/bygfoot-unstable/: bygfoot.glade  bygfoot_misc2.gladep  bygfoot_options.glade  configure.in
bygfoot/tags/release_1_8_1/bygfoot-unstable/b-u/: bygfoot-update
bygfoot/tags/release_1_8_1/bygfoot-unstable/po/: nl.po
bygfoot/tags/release_1_8_1/bygfoot-unstable/src/: bygfoot.h  callback_func.c  callbacks.h  editor_callback_func.c  editor_callbacks.h  enums.h  fixture.c  free.h  gui.c  history.c  options_callbacks.c  treeview_cell.h  xml_teams.h
bygfoot/tags/start/bygfoot-unstable/: TODO  bygfoot_misc.glade
bygfoot/tags/start/bygfoot-unstable/src/: callback_func.c  callback_func.h  callbacks.c  callbacks.h  defs.h  editor_callbacks.h  enums.h  generation.c  gui_functions.c  gui_functions.h  interface.c  load_save.c  main.c  main.h  misc.c  misc2_callbacks.h  misc2_interface.c  misc2_interface.h  misc_callbacks.h  misc_interface.c  misc_interface.h  options_callbacks.h  options_interface.h  startup.h  team_func.c  text_files.c  variables.h
tags/release_1_8_0/bygfoot-unstable/: bygfoot.glade  configure.in
tags/release_1_8_0/bygfoot-unstable/po/: ro.po
tags/release_1_8_0/bygfoot-unstable/src/: editor_defs.h  free.c  game.c  graph.c  interface.c  main.c  misc2_callbacks.c  misc_callbacks.c  option.h  options_callbacks.h  player.c  team.c  team.h
tags/release_1_8_1/bygfoot-unstable/: bygfoot_misc.glade  revision_number
tags/release_1_8_1/bygfoot-unstable/b-u/: bu_main.c
tags/release_1_8_1/bygfoot-unstable/po/: de.po
tags/release_1_8_1/bygfoot-unstable/src/: editor_callbacks.c  game.h  graph.h  load_save.c  main.h  maths.h  misc.c  misc.h  misc_callbacks.c  team.c  treeview.c  treeview_cell.c  variables.h  window.c  xml_general.c
tags/release_1_8_1/bygfoot-unstable/support_files/text_files/: bygfoot.conf  country_cl  country_hu  country_it
tags/start/bygfoot-unstable/: ChangeLog  bygfoot.glade
tags/start/bygfoot-unstable/src/: fixtures.c  misc2_callbacks.c  treeview_func.c
trunk/bygfoot-unstable/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  README_CVS  TODO  bygfoot-update  bygfoot.glade  bygfoot_misc.glade  bygfoot_misc2.glade  bygfoot_misc2.gladep  bygfoot_options.glade  configure  configure.in  revision_number
trunk/bygfoot-unstable/b-u/: bu_functions.c  bygfoot-update
trunk/bygfoot-unstable/man/: bygfoot.6
trunk/bygfoot-unstable/po/: POTFILES.in  bygfoot.pot  fr.po  hu.po  nl.po  pt_BR.po
trunk/bygfoot-unstable/src/: Makefile.am  Makefile.in  bygfoot.h  callback_func.c  callback_func.h  callbacks.c  callbacks.h  defs.h  editor_callback_func.c  editor_callback_func.h  editor_callbacks.h  editor_defs.h  enums.h  files.c  files.h  finance.c  finance.h  fixture.c  fixture.h  free.c  free.h  game.c  game.h  game_gui.c  game_gui.h  games.c  generation.c  generation.h  graph.c  graph.h  gui.c  gui.h  gui_functions.c  history.c  history.h  interface.c  load_save.c  load_save.h  main.c  main.h  (+50 more)
trunk/bygfoot-unstable/support_files/: bygfoot-update  bygfoot-update-gui
trunk/bygfoot-unstable/support_files/text_files/: bygfoot.conf  country_hu  country_mx
web/trunk/legacy/: changelog.html  changelog.t2t  config.php  contribute.html  contribute.t2t  download.html  download.t2t  exportcsv.inc.php  extras.html  extras.t2t  feedback.html  feedback.t2t  getUserList.php  home.html  home.t2t  i18n.html  i18n.t2t  index.htm  install.html  install.t2t  installing.html  installing.t2t  latest.html  latest.t2t  links.html  links.t2t  menu.htm  news.html  news.t2t  overview.html  overview.t2t  screenshots.html  screenshots.t2t  thanks.html  thanks.t2t
web/trunk/legacy/doc/: advanced.html  advanced.t2t  beginners.html  beginners.t2t  bygfoot.html  bygfoot.t2t  customization.html  customization.t2t  editor-faq.html  editor-faq.t2t  faq.html  faq.t2t  fulldoc.html  fulldoc.t2t  index.html  index.t2t  install.html  install.html_old  install.t2t  intermediate.html  intermediate.t2t  manager-faq.html  manager-faq.t2t  overview.html  overview.t2t  tips.html  tips.t2t  toc.html  toc.t2t
web/trunk/legacy/doc/1.9/: def_howto.html  def_howto.t2t  def_howto_countries.html  def_howto_countries.t2t  def_howto_cups.html  def_howto_cups.t2t  def_howto_leagues.html  def_howto_leagues.t2t  def_howto_lgcommentary.html  def_howto_lgcommentary.t2t  def_howto_news.html  def_howto_news.t2t  def_howto_plnames.html  def_howto_plnames.t2t  def_howto_strategy.html  def_howto_strategy.t2t  def_howto_teams.html  def_howto_teams.t2t  index.html  tags_ref.html  tags_ref.t2t  toc.html  toc.t2t  translation-1.9.html  translation-1.9.t2t
web/trunk/legacy/extras/: official_names
(+7 files in other folders)
